feat: Add workflow ID to Spark application names and log filenames
- Session Manager: Include workflow ID in Spark app names for all cluster types (Local, Standalone, Yarn, Mesos)
- Workflow Executor: Pass workflow ID to createSparkContext for app naming
- Log filenames: Include workflow ID in format: {timestamp}-{workflow_id}-{cluster_name}.log
- Python logging: Redirect to stdout/stderr for visibility in Spark driver logs

Benefits:
- Easy workflow identification in Spark UI
- Better log file correlation and traceability
- Support for multiple concurrent workflows
- Improved debugging efficiency

Files modified:
- 7 Session Manager files (launchers, spawner, log factory)
- 2 Workflow Executor files (Executor, SessionExecutor)
- 1 Python logging file (simple_logging.py)